--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -73,7 +73,7 @@
         <article class="product-card">
           <h2 class="product-card__title">아파트</h2>
           <p class="product-card__desc">
-            아파트를 담보로 한 각종 상품 정보를 확인해보세요.
+            아파트를 소유하고 계신가요?  온투업에서 취급중인 각종 아파트 담보대출 상품을 확인해보세요.
           </p>
 
           <!-- 해시태그 영역 (화면에서는 숨김, SEO용) -->
@@ -117,7 +117,7 @@
         <article class="product-card">
           <h3 class="product-card__title">빌라 · 연립주택</h3>
           <p class="product-card__desc">
-             빌라·연립주택을 담보로 한 각종 상품 정보를 확인해보세요.
+             빌라 또는 연립주택을 소유하고 계신가요? 온투업에서 취급중인 각종 빌라 · 연립주택 담보대출 상품을 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
