--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -57,7 +57,6 @@
   <p class="products-hero__note">
     정확한 대출조건은 해당 대출기관에 직접 문의하세요.
   </p>
-  <p class="products-hero__note">
     후추 담보대출계산기는 개인정보를 입력하지 않아도, 49개 온투업체 중 맞춤 온투업체 확인이 가능합니다.
   </p>
 </section>
@@ -73,10 +72,10 @@
         <article class="product-card">
           <h2 class="product-card__title">아파트</h2>
           <p class="product-card__desc">
-            아파트를 소유하고 계신가요?  온투업에서 취급중인 각종 아파트 담보대출 상품을 확인해보세요.
+            아파트를 소유하고 계신가요?<br>
+            온투업에서 취급중인 각종 아파트 담보대출 상품을 확인해보세요.
           </p>
-
-          <!-- 해시태그 영역 (화면에서는 숨김, SEO용) -->
+           <!-- 해시태그 영역 (화면에서는 숨김, SEO용) -->
           <div class="product-card__tags visually-hidden">
             <span class="product-tag">#아파트대출</span>
             <span class="product-tag">#아파트담보대출</span>
@@ -117,7 +116,8 @@
         <article class="product-card">
           <h3 class="product-card__title">빌라 · 연립주택</h3>
           <p class="product-card__desc">
-             빌라 또는 연립주택을 소유하고 계신가요? 온투업에서 취급중인 각종 빌라 · 연립주택 담보대출 상품을 확인해보세요.
+             빌라 또는 연립주택을 소유하고 계신가요?<br>
+             온투업에서 취급중인 각종 빌라·연립주택 담보대출 상품을 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
