--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -55,9 +55,8 @@
     온투업(P2P)에서 취급중인 대출상품을 확인해보세요.
   </p>
   <p class="products-hero__note">
-    정확한 대출조건은 해당 대출기관에 직접 문의하세요.
-  </p>
-    후추 담보대출계산기는 개인정보를 입력하지 않아도, 49개 온투업체 중 맞춤 온투업체 확인이 가능합니다.
+    정확한 대출조건은 해당 대출기관에 직접 문의하세요.<br>
+    후추 담보대출계산기는 <strong>개인정보를 입력하지 않아도</strong>, 49개 온투업체 중 맞춤 온투업체 확인이 가능합니다.
   </p>
 </section>
 
