--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -52,10 +52,12 @@
    <section class="products-hero">
   <h1 class="products-hero__title">온라인투자연계금융업 대출상품 정보</h1>
   <p class="products-hero__desc">
-    온투업(P2P)에서 취급중인 대출상품을 확인해보세요.
+    온투업(P2P)에서 취급중인 대출상품을 확인해 보세요.
   </p>
   <p class="products-hero__note">
-    정확한 대출조건은 해당 대출기관에 직접 문의하세요.<br>
+    정확한 대출조건은 해당 대출기관에 직접 문의하세요.
+  </p>
+  <p class="products-hero__note">
     후추 담보대출계산기는 <strong>개인정보를 입력하지 않아도</strong>, 49개 온투업체 중 맞춤 온투업체 확인이 가능합니다.
   </p>
 </section>
@@ -72,7 +74,7 @@
           <h2 class="product-card__title">아파트</h2>
           <p class="product-card__desc">
             아파트를 소유하고 계신가요?<br>
-            온투업에서 취급중인 각종 아파트 담보대출 상품을 확인해보세요.
+            온투업의 각종 아파트 담보대출 상품을 확인해 보세요.
           </p>
            <!-- 해시태그 영역 (화면에서는 숨김, SEO용) -->
           <div class="product-card__tags visually-hidden">
@@ -116,7 +118,7 @@
           <h3 class="product-card__title">빌라 · 연립주택</h3>
           <p class="product-card__desc">
              빌라 또는 연립주택을 소유하고 계신가요?<br>
-             온투업에서 취급중인 각종 빌라·연립주택 담보대출 상품을 확인해보세요.
+             온투업의 각종 빌라·연립주택 담보대출 상품을 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
@@ -160,7 +162,8 @@
         <article class="product-card">
           <h3 class="product-card__title">단독주택 · 다가구주택</h3>
           <p class="product-card__desc">
-            단독주택·다가구주택을 담보로 한 각종 상품 정보를 확인해보세요.
+            단독주택·다가구주택을 소유하고 계신가요?<br>
+            온투업의 각종 단독·다가구주택 담보대출 상품을 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
@@ -200,7 +203,8 @@
         <article class="product-card">
           <h3 class="product-card__title">토지 · 임야</h3>
           <p class="product-card__desc">
-            토지·임야를 담보로 한 각종 상품 정보를 확인해보세요.
+            토지·임야을 소유하고 계신가요?<br>
+            온투업의 각종 토지·임야 담보대출 상품을 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
@@ -236,7 +240,8 @@
         <article class="product-card">
           <h3 class="product-card__title">근린생활시설</h3>
           <p class="product-card__desc">
-            근린생활시설(상가)을 담보로 한 각종 상품 정보를 확인해보세요.
+            근린생활시설(상가)을 소유하고 계신가요?<br>
+            온투업의 각종 근린생활시설 담보대출 상품을 확인해보세요.
           </p>
 
           <!-- 해시태그 (숨김) -->
