--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -96,19 +96,19 @@
           <!-- 버튼들 -->
           <div class="product-card__buttons">
             <a href="/beta/products/apt-general.html" class="product-btn">
-              일반담보대출&nbsp;&nbsp;〉
+              일반담보대출&nbsp;〉
             </a>
             <a href="/beta/products/apt-share.html" class="product-btn">
-              지분담보대출&nbsp;&nbsp;〉
+              지분담보대출&nbsp;〉
             </a>
             <a href="/beta/products/apt-auction.html" class="product-btn">
-              경락잔금대출&nbsp;&nbsp;〉
+              경락잔금대출&nbsp;〉
             </a>
             <a href="/beta/products/apt-deposit-return.html" class="product-btn">
-              임대보증금반환대출&nbsp;&nbsp;〉
+              임대보증금반환대출&nbsp;〉
             </a>
             <a href="/beta/products/apt-highrate-refi.html" class="product-btn">
-              대부업대환대출&nbsp;&nbsp;〉
+              대부업대환대출&nbsp;〉
             </a>
           </div>
         </article>
