--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -52,10 +52,10 @@
    <section class="products-hero">
   <h1 class="products-hero__title">온라인투자연계금융업 대출상품 정보</h1>
   <p class="products-hero__desc">
-    <li>온투업(P2P)에서 취급중인 대출상품을 확인해 보세요.</li>
+    온투업(P2P)에서 취급중인 대출상품을 확인해 보세요.
   </p>
   <p class="products-hero__note">
-    <li>정확한 대출조건은 해당 대출기관에서 안내해 드립니다.</li>
+    정확한 대출조건은 해당 대출기관에서 안내해 드립니다.
   </p>
 </section>
 
@@ -279,14 +279,14 @@
             <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
             <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
             <ul>
-              <li>개인정보 입력 <strong>No</strong></li>
-              <li>신용점수영향 <strong>No</strong></li>
-              <li>간단한 정보로도 <strong>OK</strong></li>
-              <li class="calculator-last-li">
-              <li>49개 온투업체 중 <strong>맞춤 온투업체</strong> 확인 가능</li>              
-                <div class="product-card__buttons">
-                  <a href="/" class="product-btn product-btn--calculator">바로가기</a>
-                </div>
+            <li>개인정보 입력 <strong>NO</strong></li>
+            <li>신용점수영향 <strong>NO</strong></li>
+            <li>간단한 정보로도 <strong>OK</strong></li>
+            <li class="calculator-last-li">
+              <span>49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능</span>
+              <div class="product-card__buttons">
+                <a href="/" class="product-btn product-btn--calculator">바로가기</a>
+              </div>
               </li>
             </ul>
           </article>
