--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -314,7 +314,7 @@
 
        <!-- 3. 자주 묻는 질문 (FAQ) -->
     <section class="products-section products-section--info">
-      <h2 class="products-section__title">3. 자주 묻는 질문 (FAQ)</h2>
+      <h2 class="products-section__title">자주 묻는 질문 (FAQ)</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
           <h3>Q. 담보대출 한도는 어떻게 정해지나요?</h3>
