--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -55,7 +55,7 @@
         <h2>아파트 – 일반담보대출</h2>
 
         <p class="hero-intro">
-          온라인투자연계금융업(이하 ‘온투업’) 아파트담보대출 상품 중 <strong>일반담보대출</strong>에 관한 정보입니다.
+          온라인투자연계금융업(이하 ‘온투업’) 아파트 담보대출 상품 중 <strong>일반담보대출</strong>에 관한 정보입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
@@ -66,10 +66,10 @@
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
-          *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
+          *해당 정보는 온투업에서 취급중인 부동산 담보대출 상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
         </p>
         <p class="hero-summary-note hero-note-sub">
-          (대출한도 등 관련 문의는 해당 온투업사에 문의하세요.)
+          (자세한 대출 관련 문의는 해당 온투업체에 문의하세요.)
         </p>
       </article>
     </section>
