--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -119,7 +119,7 @@
         <ul style="margin-bottom:14px;">
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
-          <li>KB시세 등재 아파트 또는 주상복합</li>
+          <li>KB시세 확인 가능한 아파트 및 주상복합</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
