--- a/beta/index.html
+++ b/beta/index.html
@@ -95,7 +95,7 @@
                 <a href="/" class="beta-hero-card">
                   <img src="/assets/hero-card-calculator.png" alt="온투업 전용 담보대출 계산기" />
                 </a>
-                <a href="https://blog.naver.com/huchudb" target="_blank" rel="noopener" class="beta-hero-card">
+                <a href="https://blog.naver.com/honestbros" target="_blank" rel="noopener" class="beta-hero-card">
                   <img src="/assets/hero-card-blog.png" alt="후추 공식 블로그" />
                 </a>
               </div>
