--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -104,8 +104,12 @@
   나와 비슷한 대출 사례를 찾아보고 금리, 플랫폼수수료 등 대출 조건을 사전에 확인해보세요~
 </p>
 <div class="product-card__buttons">
-  <!-- TODO: 실제 블로그 주소로 교체 -->
-  <a href="#" class="product-btn">바로가기</a>
+  <a href="https://blog.naver.com/honestbros"
+     target="_blank"
+     rel="noopener"
+     class="product-btn">
+    바로가기
+  </a>
 </div>
        </article>
       </div>
