--- a/beta/index.html
+++ b/beta/index.html
@@ -42,10 +42,10 @@
       <!-- 처음에는 숨김: hide 클래스 중요!! -->
       <div id="betaMenuPanel" class="beta-menu-panel hide">
         <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-        <a class="beta-menu-link" href="/products/">온투업 대출상품정보</a>
+        <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
         <a class="beta-menu-link" href="/">담보대출 계산기</a>
-        <a class="beta-menu-link" href="/company.html">회사소개</a>
-        <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
+        <a class="beta-menu-link" href="/beta/company.html">회사소개</a>
+        <a class="beta-menu-link" href="/beta/contact.html">제휴 및 기타문의</a>
       </div>
     </div>
   </div>
