--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -36,8 +36,8 @@
         </button>
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
-          <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-          <a class="beta-menu-link" href="/products/">온투업 대출상품정보(정식)</a>
+          <a class="beta-menu-link" href="/beta/">온투업 대출 통계</a>
+          <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품 정보</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
