--- a/beta/index.html
+++ b/beta/index.html
@@ -89,7 +89,7 @@
                 <a href="/beta/" class="beta-hero-card">
                   <img src="/assets/hero-card-stat.png" alt="온투업(P2P) 대출 통계" />
                 </a>
-                <a href="/products/" class="beta-hero-card">
+                <a href="/beta/products/index.html" class="beta-hero-card">
                   <img src="/assets/hero-card-products.png" alt="온투업(P2P) 대출 상품 정보" />
                 </a>
                 <a href="/" class="beta-hero-card">
