--- a/beta/products/land-forest-general.html
+++ b/beta/products/land-forest-general.html
@@ -37,7 +37,7 @@
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
           <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보(베타)</a>
+          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품 정보</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
@@ -60,9 +60,9 @@
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
         <p>· <strong>대상고객</strong> Ι 은행에서 더 이상 한도가 없고, 추가 대출이 필요한 개인</p>
-        <p>· <strong>대출한도</strong> Ι 최소 1천만원 ~ 최대 70억원</p>
+        <p>· <strong>대출한도</strong> Ι 최소 1천만원 ~ 최대 20억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
-        <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
+        <p>· <strong>대출금리</strong> Ι 최저 11% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
@@ -128,7 +128,7 @@
 
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
-          <li>최소 1천만원 ~ 최대 70억원</li>
+          <li>최소 1천만원 ~ 최대 20억원</li>
         </ul>
 
         <h3>대출기간</h3>
