--- a/beta/products/commercial-general.html
+++ b/beta/products/commercial-general.html
@@ -37,7 +37,7 @@
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
           <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보(베타)</a>
+          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
@@ -59,12 +59,13 @@
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 상가·사무실을 담보로 추가 자금이 필요한 개인·법인</p>
+        <p>· <strong>대상고객</strong> Ι 상가·사무실을 소유한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 1천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
-        <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
+        <p>· <strong>대출금리</strong> Ι 최저 12% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
-
+        <p>· <strong>주의사항</strong> Ι 건물 전체의 경우에만 대출 가능</p>
+        
         <p class="hero-summary-note hero-note-main">
           *해당 정보는 온투업에서 취급중인 부동산 담보대출 상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
         </p>
@@ -120,15 +121,15 @@
       <article class="product-info-card">
         <h3>대출대상</h3>
         <ul style="margin-bottom:14px;">
-          <li>만 19세 이상 내국인 또는 국내 법인</li>
-          <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 개인 / 내부 심사 기준 충족 법인</li>
+          <li>만 19세 이상 내국인</li>
+          <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 개인</li>
           <li>상가, 근린생활시설, 업무용 오피스 등 상업용 부동산</li>
           <li>임대수익 또는 사업소득이 있는 고객</li>
         </ul>
 
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
-          <li>최소 1천만원 ~ 최대 70억원</li>
+          <li>최소 3천만원 ~ 최대 70억원</li>
         </ul>
 
         <h3>대출기간</h3>
