--- a/beta/products/commercial-general.html
+++ b/beta/products/commercial-general.html
@@ -64,7 +64,7 @@
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 12% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
-        <p>· <strong>주의사항</strong> Ι 건물 전체의 경우에만 대출 가능</p>
+         <p>· <strong>대출불가</strong> Ι 호수로 구분된 구분상가</p>
         
         <p class="hero-summary-note hero-note-main">
           *해당 정보는 온투업에서 취급중인 부동산 담보대출 상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
