--- a/beta/products/apt-share.html
+++ b/beta/products/apt-share.html
@@ -52,7 +52,7 @@
     <!-- 히어로 영역 -->
     <section class="products-hero">
       <article class="product-info-card hero-card">
-        <h2>아파트 지분담보대출(지분대출)</h2>
+        <h2>아파트 – 지분담보대출(지분대출)</h2>
 
         <p class="hero-intro">
           온라인투자연계금융업(이하 ‘온투업’) <strong>아파트 지분담보대출(지분대출)</strong> 상품에 관한 정보입니다.
@@ -60,10 +60,10 @@
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 공동소유 아파트의 지분만을 담보로 추가 자금이 필요한 개인</p>
-        <p>· <strong>대출한도</strong> Ι 최소 1천만원 ~ 최대 70억원 (지분율·담보가치에 따라 산정)</p>
+        <p>· <strong>대상고객</strong> Ι 공동소유 아파트의 지분만을 담보로 대출이 필요한 개인</p>
+        <p>· <strong>대출한도</strong> Ι 최소 3천만원 ~ 최대 70억원 (지분율·담보가치에 따라 산정)</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
-        <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
+        <p>· <strong>대출금리</strong> Ι 최저 10.0% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
@@ -126,14 +126,13 @@
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
           <li>KB시세 확인 가능한 아파트 및 주상복합의 <strong>공동소유 지분 보유자</strong></li>
-          <li>상속지분, 이혼재산분할, 가족·친척 공동명의 등으로 지분만 보유한 고객</li>
+          <li>상속지분, 가족·친척 공동명의 등으로 지분을 보유한 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
           <li>
-            기본 계산식 예시:  
             <strong>KB시세 × 내 지분율 × LTV − 선순위 채권액 − 임대보증금 등</strong>
           </li>
           <li>선순위 대출, 임대보증금, 지분구조 등에 따라 실제 한도는 변동될 수 있습니다.</li>
@@ -154,7 +153,7 @@
           <li>
             연장가능<br>
             <span class="extend-note">
-              *연장 시 담보가치 하락, 지분 구조 변동, 신용정보 변동 등에 따라 연장이 어려울 수 있으며,
+              *연장 시 담보가치 하락, 신용정보 변동 등에 따라 연장이 어려울 수 있으며,
               연장 시 금리와 플랫폼 수수료가 변경될 수 있습니다.
             </span>
           </li>
@@ -169,9 +168,9 @@
         <ul style="margin-bottom:14px;">
           <li>근저당권 설정 관련 비용</li>
           <li>임대차 권리조사 비용</li>
-          <li>감정비용 (시세 및 지분가치 확인이 필요한 경우)</li>
+          <li>감정비용 (KB시세 확인 불가한 경우)</li>
           <li>지분정리·등기 관련 비용 (필요 시)</li>
-          <li>출장 자서비용 (대면 자서 온투업사의 경우)</li>
+          <li>출장 자서비용 (선택사항)</li>
         </ul>
 
         <h3>중도상환수수료</h3>
@@ -198,8 +197,8 @@
           <h3>이혼 재산분할로 지분만 보유한 경우</h3>
           <p>
             이혼 과정에서 아파트 전체가 아닌 일정 지분만 보유하게 된 경우,
-            지분을 매각하지 않고 <strong>지분담보대출</strong>을 통해
-            생활비·정착비 등을 마련하는 사례가 있습니다.
+            다른 공유자의 동의가 쉽지 않을 때, 동의 없이
+            <strong>지분담보대출</strong>을 통해 생활비 등을 마련하는 사례가 있습니다.
           </p>
         </article>
 
@@ -207,7 +206,7 @@
           <h3>가족·친척과 공동소유한 경우</h3>
           <p>
             가족·친척과 공동명의로 보유한 아파트에서
-            다른 공유자의 동의나 지분 매매가 쉽지 않을 때,
+            다른 공유자의 동의가 쉽지 않을 때, 동의 없이
             <strong>내 지분만을 담보로 한 대출</strong>을 고려하는 고객이 많습니다.
           </p>
         </article>
