--- a/beta/products/apt-share.html
+++ b/beta/products/apt-share.html
@@ -218,7 +218,7 @@
       <h2 class="products-section__title">3. 자주 묻는 질문 (FAQ)</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
-          <h3>Q. 공동소유 아파트인데, 정말로 제 지분만 담보로 대출이 가능한가요?</h3>
+          <h3>Q. 공동소유 아파트인데, 정말로 제 지분만으로 대출이 가능한가요?</h3>
           <p>
             일부 온투업사는 <strong>공동소유 지분만을 별도로 담보</strong>로 잡아 대출을 취급하기도 합니다.
           </p>
