--- a/beta/products/apt-share.html
+++ b/beta/products/apt-share.html
@@ -56,7 +56,7 @@
 
         <p class="hero-intro">
           온라인투자연계금융업(이하 ‘온투업’) <strong>아파트 지분담보대출(지분대출)</strong> 상품에 관한 정보입니다.
-          공동소유 아파트에서 <strong>내 지분만을 담보</strong>로 자금을 마련하고자 할 때 활용되는 상품입니다.
+          공동소유 아파트의 <strong>내 지분만을 담보</strong>로 자금을 마련하고자 할 때 활용되는 상품입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
@@ -65,6 +65,7 @@
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 10.0% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
+        <p>· <strong>참고사항</strong> Ι 공동소유자 동의 필요 없음</p>
 
         <p class="hero-summary-note hero-note-main">
           *해당 정보는 온투업에서 취급중인 부동산 지분담보대출 상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
