--- a/beta/products/apt-share.html
+++ b/beta/products/apt-share.html
@@ -126,7 +126,7 @@
         <ul style="margin-bottom:14px;">
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
-          <li>KB시세 확인 가능한 아파트 및 주상복합의 <strong>공동소유 지분 보유자</strong></li>
+          <li>아파트 및 주상복합의 <strong>공동소유 지분 보유자</strong></li>
           <li>상속지분, 가족·친척 공동명의 등으로 지분을 보유한 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
@@ -219,9 +219,9 @@
       <h2 class="products-section__title">3. 자주 묻는 질문 (FAQ)</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
-          <h3>Q. 공동소유 아파트인데, 정말로 제 지분만으로 대출이 가능한가요?</h3>
+          <h3>Q. 공동소유 아파트인데, 제 지분만으로 대출이 가능한가요?</h3>
           <p>
-            일부 온투업사는 <strong>공동소유 지분만을 별도로 담보</strong>로 잡아 대출을 취급하기도 합니다.
+            일부 온투업사는 <strong>공동소유 지분만을 담보</strong>로 대출을 취급하고 있습니다.
           </p>
           <p>
             다만 지분 구조, 선순위 채권, 다른 공유자의 관계 등에 따라
