--- a/beta/products/apt-share.html
+++ b/beta/products/apt-share.html
@@ -60,7 +60,7 @@
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 공동소유 아파트의 지분만을 담보로 대출이 필요한 개인</p>
+        <p>· <strong>대상고객</strong> Ι 내 지분만을 담보로 대출이 필요한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 3천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 10.0% ~ 최대 15.9%</p>
