--- a/beta/products/villa-share.html
+++ b/beta/products/villa-share.html
@@ -126,7 +126,7 @@
         <ul style="margin-bottom:14px;">
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
-          <li>빌라·연립(다세대주택 포함)의 <strong>공동소유 지분 보유자</strong></li>
+          <li>빌라(다세대주택)·연립의 <strong>공동소유 지분 보유자</strong></li>
           <li>상속지분, 가족·친척 공동명의 등으로 지분을 보유한 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
@@ -264,7 +264,7 @@
       <div class="product-card__tags">
         <span class="product-tag">#빌라지분대출</span>
         <span class="product-tag">#연립지분대출</span>
-        <span class="product-tag">#빌라연립지분담보대출</span>
+        <span class="product-tag">#다세대주택지분대출</span>
         <span class="product-tag">#지분담보대출</span>
         <span class="product-tag">#상속지분대출</span>
         <span class="product-tag">#이혼지분대출</span>
