--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -37,7 +37,7 @@
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
           <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보(베타)</a>
+          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
@@ -56,7 +56,7 @@
 
         <p class="hero-intro">
           온라인투자연계금융업(이하 ‘온투업’) 아파트 담보대출 상품 중
-          <strong>경락잔금대출</strong>에 관한 정보입니다.
+          <strong>경락잔금대출</strong>에 관한 정보입니다.</br>
           법원경매 등으로 아파트를 낙찰받은 후 <strong>잔금 및 취득비용·추가자금</strong>을 마련할 때 활용되는 상품입니다.
         </p>
 
