--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -89,7 +89,7 @@
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                아파트 시세·낙찰가와 <strong>선순위·보증금</strong>을 반영해
+                아파트 KB시세·낙찰가를를 반영해
                 경락잔금 및 추가자금 한도를 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
@@ -102,11 +102,11 @@
         <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
           <h2 class="products-section__title">실제 경락잔금대출 사례를 확인하세요.</h2>
-          <h3 class="calculator-extra-subtitle">잔금부족·추가 인테리어 비용까지 한 번에</h3>
+          <h3 class="calculator-extra-subtitle">잔금부족·명도비용까지 한 번에</h3>
           <p class="calculator-extra-text">
             후추의 <span class="naver-blog-text">네이버 공식 블로그</span>에서
             <strong>경락잔금대출 사례</strong>를 확인해보고
-            잔금·취득세·인테리어비 등 자금 구조와
+            잔금·취득세·인테리어비 등 대출출 구조와
             금리, 플랫폼수수료 수준을 미리 비교해보세요.
           </p>
           <div class="product-card__buttons">
@@ -137,9 +137,9 @@
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
           <li>
-            <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV − 선순위 채권액 − 임대보증금 등</strong>
+            <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV - 선순위 채권액 등</strong>
           </li>
-          <li>낙찰가, 입찰경쟁 정도, 선순위 권리, 보증금 등에 따라 실제 한도는 변동될 수 있습니다.</li>
+          <li>낙찰가, 입찰경쟁 정도, 선순위 권리 등에 따라 실제 한도는 변동될 수 있습니다.</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -154,7 +154,7 @@
 
         <h3>대출실행 시점</h3>
         <ul style="margin-bottom:14px;">
-          <li>보통 <strong>잔금 납부일 전·후</strong>로 대출이 실행되며, 잔금과 각종 취득비용 지급에 사용됩니다.</li>
+          <li>보통 <strong>잔금 납부일</strong>에 대출이 실행되며, 잔금과 각종 취득비용 지급에 사용됩니다.</li>
         </ul>
 
         <h3>만기연장</h3>
@@ -178,7 +178,6 @@
           <li>근저당권 설정 관련 비용</li>
           <li>임대차 권리조사 비용</li>
           <li>감정비용 (시세 확인이 어려운 경우)</li>
-          <li>등기·법무사 비용</li>
           <li>출장 자서비용 (대면 자서 온투업사의 경우)</li>
         </ul>
 
@@ -211,9 +210,9 @@
         </article>
 
         <article class="product-info-card">
-          <h3>은행 경락잔금대출 한도가 부족한 경우</h3>
+          <h3>은행의 경락잔금대출 한도가 부족한 경우</h3>
           <p>
-            은행 경락잔금대출 한도가 부족하거나,
+            은행의 경락잔금대출 한도가 부족하거나,
             DSR·소득 요건으로 인해 충분한 한도가 나오지 않을 때
             <strong>온투업 경락잔금대출</strong>을 추가로 검토하는 경우가 있습니다.
           </p>
@@ -228,7 +227,7 @@
         <article class="product-info-card">
           <h3>Q. 경락잔금대출 한도는 어떻게 정해지나요?</h3>
           <p>
-            보통 <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV − 선순위 채권액 − 보증금</strong>을 기준으로
+            보통 <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV − 선순위 채권액</strong>을 기준으로
             대략적인 한도를 산정합니다.
           </p>
           <p>
