--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -57,21 +57,21 @@
         <p class="hero-intro">
           온라인투자연계금융업(이하 ‘온투업’) 아파트 담보대출 상품 중
           <strong>경락잔금대출</strong>에 관한 정보입니다.</br>
-          법원경매 등으로 아파트를 낙찰받은 후 <strong>잔금 및 취득비용·추가자금</strong>을 마련할 때 활용되는 상품입니다.
+          법원 경매, 공매로 아파트를 낙찰받은 후 <strong>잔금 등 추가자금</strong>을 마련할 때 활용되는 상품입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 법원경매·공매 등으로 아파트를 낙찰받고 잔금이 필요한 개인</p>
+        <p>· <strong>대상고객</strong> Ι 경매·공매 등으로 아파트를 낙찰받고 자금이 필요한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 2천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
-          *해당 정보는 온투업에서 취급중인 부동산 경락잔금대출 및 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
+          * 해당 정보는 온투업에서 취급중인 실제 대출 사례를 바탕으로 구성된 <strong>단순 정보 제공용</strong> 콘텐츠입니다.
         </p>
         <p class="hero-summary-note hero-note-sub">
-          (자세한 대출 관련 문의는 해당 온투업체에 문의하세요.)
+          ** 자세한 대출 관련 문의는 해당 온투업체 문의하세요.
         </p>
       </article>
     </section>
