--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -40,7 +40,7 @@
           <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
-          <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
+          <a class="beta-menu-link" href="/contact.html">광고문의</a>
           <a class="beta-menu-link" href="/beta/admin-beta.html">관리자(베타)</a>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
-          * 해당 정보는 온투업에서 취급중인 실제 대출 사례를 바탕으로 구성된 <strong>단순 정보 제공용</strong> 콘텐츠입니다.
+          * 해당 정보는 온투업에서 취급중인 실제 대출 사례를 바탕으로 구성된 <strong>단순 정보 제공용</strong> 콘텐츠입니다.</br>
         </p>
         <p class="hero-summary-note hero-note-sub">
           ** 자세한 대출 관련 문의는 해당 온투업체 문의하세요.
