--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -68,7 +68,8 @@
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
-           해당 정보는 온투업에서 취급중인 실제 대출 사례를 바탕으로 구성된 <strong>단순 정보 제공용</strong> 콘텐츠입니다.</br>
+           해당 정보는 온투업에서 취급중인 실제 대출 사례를 바탕으로 구성된 <strong>단순 정보 제공용</strong> 콘텐츠입니다.
+        </br>
         </p>
         <p class="hero-summary-note hero-note-sub">
            자세한 대출 관련 문의는 해당 온투업체 문의하세요.
