--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -61,17 +61,20 @@
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 경매·공매 등으로 아파트를 낙찰받고 자금이 필요한 개인</p>
+        <p>· <strong>대상고객</strong> Ι 경매·공매로로 아파트를 낙찰받고 자금이 필요한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 2천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
-           해당 정보는 온투업에서 취급중인 실제 대출 사례를 바탕으로 구성된 <strong>단순 정보 제공용</strong> 콘텐츠입니다.
+          <span class="hero-note-star">*</span>
+          해당 정보는 온투업에서 취급중인 부동산 경락잔금대출 및 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
         </p>
+
         <p class="hero-summary-note hero-note-sub">
-           자세한 대출 관련 문의는 해당 온투업체 문의하세요.
+          <span class="hero-note-star">**</span>
+          자세한 대출 관련 문의는 해당 온투업체에 문의하세요.
         </p>
       </article>
     </section>
@@ -130,7 +133,7 @@
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
           <li>KB시세 확인 가능한 아파트 및 주상복합 낙찰자</li>
-          <li>법원경매·공매 등으로 아파트를 낙찰받고 소유권 이전 예정인 고객</li>
+          <li>경매·공매 등으로 아파트를 낙찰받고 소유권 이전 예정인 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
@@ -139,7 +142,7 @@
           <li>
             <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV - 선순위 채권액 등</strong>
           </li>
-          <li>낙찰가, 입찰경쟁 정도, 선순위 권리 등에 따라 실제 한도는 변동될 수 있습니다.</li>
+          <li>낙찰가, 입찰경쟁률, 선순위 권리 등에 따라 실제 한도는 변동될 수 있습니다.</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -154,7 +157,7 @@
 
         <h3>대출실행 시점</h3>
         <ul style="margin-bottom:14px;">
-          <li>보통 <strong>잔금 납부일</strong>에 대출이 실행되며, 잔금과 각종 취득비용 지급에 사용됩니다.</li>
+          <li>보통 <strong>잔금 납부일</strong>에 대출이 실행됩니다.</li>
         </ul>
 
         <h3>만기연장</h3>
