--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -61,7 +61,7 @@
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 경매·공매로로 아파트를 낙찰받고 자금이 필요한 개인</p>
+        <p>· <strong>대상고객</strong> Ι 경매·공매로 낙찰받고 자금이 필요한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 2천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
@@ -69,7 +69,7 @@
 
         <p class="hero-summary-note hero-note-main">
           <span class="hero-note-star">*</span>
-          해당 정보는 온투업에서 취급중인 부동산 경락잔금대출 및 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
+          해당 정보는 온투업에서 취급중인 상품 및 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
         </p>
 
         <p class="hero-summary-note hero-note-sub">
@@ -92,8 +92,8 @@
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                아파트 KB시세·낙찰가를를 반영해
-                경락잔금 및 추가자금 한도를 가늠할 수 있습니다.
+                아파트 KB시세·낙찰가를 반영해
+                대출 한도를 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
                 <a href="/" class="product-btn product-btn--calculator">바로가기</a>
@@ -105,12 +105,12 @@
         <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
           <h2 class="products-section__title">실제 경락잔금대출 사례를 확인하세요.</h2>
-          <h3 class="calculator-extra-subtitle">잔금부족·명도비용까지 한 번에</h3>
+          <h3 class="calculator-extra-subtitle">잔금 및 명도 비용까지 한 번에</h3>
           <p class="calculator-extra-text">
-            후추의 <span class="naver-blog-text">네이버 공식 블로그</span>에서
-            <strong>경락잔금대출 사례</strong>를 확인해보고
-            잔금·취득세·인테리어비 등 대출출 구조와
-            금리, 플랫폼수수료 수준을 미리 비교해보세요.
+            후추의 <span class="naver-blog-text">네이버 공식블로그</span>에서
+            <strong>대출 사례</strong>를 확인해보세요.</p></br>
+            잔금·취득세·인테리어비 등 대출 내용과
+            금리, 플랫폼수수료 수준을 미리 확인해 보세요.
           </p>
           <div class="product-card__buttons">
             <a href="https://blog.naver.com/honestbros"
@@ -132,17 +132,16 @@
         <ul style="margin-bottom:14px;">
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
-          <li>KB시세 확인 가능한 아파트 및 주상복합 낙찰자</li>
-          <li>경매·공매 등으로 아파트를 낙찰받고 소유권 이전 예정인 고객</li>
+          <li>경매·공매로 아파트를 낙찰받고 소유권 이전 예정인 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
           <li>
-            <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV - 선순위 채권액 등</strong>
+            <strong>낙찰가 또는 기준시세 × LTV - 선순위 채권액 등</strong>
           </li>
-          <li>낙찰가, 입찰경쟁률, 선순위 권리 등에 따라 실제 한도는 변동될 수 있습니다.</li>
+          <li>낙찰가, 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -152,7 +151,7 @@
 
         <h3>상환방법</h3>
         <ul style="margin-bottom:14px;">
-          <li>만기일시상환 (일부 온투업사는 분할상환 병행 가능)</li>
+          <li>만기일시상환</li>
         </ul>
 
         <h3>대출실행 시점</h3>
@@ -173,7 +172,7 @@
         
         <h3>플랫폼수수료</h3>
         <ul style="margin-bottom:14px;">
-          <li>플랫폼 수수료: 최소 1.7% ~ 5.0% 이내 (부가세 별도)</li>
+          <li>최소 1.7% ~ 5.0% 이내 (부가세 별도)</li>
         </ul>
 
         <h3>기타·부대비용</h3>
@@ -181,7 +180,7 @@
           <li>근저당권 설정 관련 비용</li>
           <li>임대차 권리조사 비용</li>
           <li>감정비용 (시세 확인이 어려운 경우)</li>
-          <li>출장 자서비용 (대면 자서 온투업사의 경우)</li>
+          <li>출장 자서비용 등(대면 자서 온투업사의 경우)</li>
         </ul>
 
         <h3>중도상환수수료</h3>
@@ -242,9 +241,8 @@
         <article class="product-info-card">
           <h3>Q. 잔금과 인테리어 비용을 동시에 대출받을 수 있나요?</h3>
           <p>
-            일부 온투업사는 잔금뿐만 아니라
-            <strong>취득세·인테리어 비용 등 추가자금</strong>까지
-            함께 조달하는 구조를 취급하고 있습니다.
+            해당 부동산의 잔금, 인테리어, 명도비 등
+            사용 용도에 대해서는 전혀 관계 없습니다.
           </p>
           <p>
             다만 LTV 한도와 상환능력 등을 종합적으로 따져야 하므로,
@@ -255,16 +253,12 @@
         <article class="product-info-card">
           <h3>Q. 후추 담보대출 계산기로 경락잔금대출도 확인 가능한가요?</h3>
           <p>
-            네. 후추 담보대출 계산기는
-            <strong>아파트 기준시세, 선순위 채권, 임대보증금</strong> 등을 반영하여
-            대략적인 담보가치를 산출하도록 설계되어 있습니다.
+            네. 가능합니다.
+            
+            또한 입찰전에 <strong>예상 입찰가격</strong>을 기재하고
+            대출 가능 금액을 통해 자기자본을 얼마나 준비해야 하는지 파악 할 수 있습니다.
           </p>
-          <p>
-            낙찰가와 자기자본, 필요한 잔금·추가자금을 함께 고려하면
-            <strong>경락잔금대출 가능 여부와 필요한 자기자본 수준</strong>을
-            보다 현실적으로 가늠해 볼 수 있습니다.
-          </p>
-        </article>
+         </article>
       </div>
     </section>
 
@@ -275,8 +269,10 @@
         <span class="product-tag">#경락잔금대출</span>
         <span class="product-tag">#경락자금대출</span>
         <span class="product-tag">#낙찰잔금대출</span>
+        <span class="product-tag">#낙찰자금대출</span>
         <span class="product-tag">#법원경매대출</span>
         <span class="product-tag">#후순위담보대출</span>
+        <span class="product-tag">#P2P대출</span>
         <span class="product-tag">#P2P주담대</span>
         <span class="product-tag">#온투업대출</span>
         <span class="product-tag">#담보대출계산기</span>
