--- a/beta/products/villa-general.html
+++ b/beta/products/villa-general.html
@@ -65,11 +65,14 @@
         <p>· <strong>대출금리</strong> Ι 최저 12.0% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
-        <p class="hero-summary-note hero-note-main">
-          *해당 정보는 온투업에서 취급중인 부동산 담보대출 상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
+         <p class="hero-summary-note hero-note-main">
+          <span class="hero-note-star">*</span>
+          해당 정보는 온투업에서 취급중인 상품 및 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
         </p>
+
         <p class="hero-summary-note hero-note-sub">
-          (자세한 대출 관련 문의는 해당 온투업체에 문의하세요.)
+          <span class="hero-note-star">**</span>
+          자세한 대출 관련 문의는 해당 온투업체에 문의하세요.
         </p>
       </article>
     </section>
