--- a/beta/calculator.html
+++ b/beta/calculator.html
@@ -72,7 +72,7 @@
           <span id="marketValue_view" class="amount-display">0원</span>
         </div>
         <p class="info">
-          *아파트는 KB시세를 입력하세요 → <a href="https://kbland.kr/search" target="_blank" rel="noopener">[KB시세 바로가기]</a><br>
+          *아파트는 KB시세를 입력하세요<br><a href="https://kbland.kr/search" target="_blank" rel="noopener">[KB시세 바로가기]</a><br>
           (3층 이상: 일반가 / 2층 이하: 하위평균가)
         </p>
       </div>
@@ -91,11 +91,11 @@
           <input type="text" id="requestedLoan" placeholder="예: 50,000,000">
           <span id="requestedLoan_view" class="amount-display">0원</span>
         </div>
-        <p class="info">* 대환(상환)해야 할 금액이 포함된 총 필요 금액을 입력하세요.</p>
+        <p class="info">* 대환(상환) 할 금액을 포함해주세요.</p>
       </div>
 
       <div class="step">
-        <label class="steplabel no-badge-before">(선택사항) 금액중 상환+반환할 금액
+        <label class="steplabel no-badge-before">(선택)  상환+반환할 금액
         </label>
         <div class="amount-row">
           <input type="text" id="deduction" value="0">
@@ -104,12 +104,12 @@
       </div>
 
       <div class="step">
-        <label class="steplabel no-badge-before">(선택사항) 지분 대출의 경우 지분율 입력</label>
+        <label class="steplabel no-badge-before">(선택)  지분 대출의 경우 지분율 입력</label>
         <div class="amount-row">
           <input type="number" id="sharePercent" inputmode="numeric" min="1" max="100" placeholder="예: 50">
           <span id="sharePercent_view" class="amount-display">100%</span>
         </div>
-        <p class="info">지분 대출이면 본인 지분율(1~100%)을 입력하세요. 미입력 시 전체 소유(100%) 기준으로 계산합니다.</p>
+        <p class="info">본인의 지분율(%)을 숫자로 입력하세요.</p>
       </div>
     </div>
 
