--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <span id="marketValue_view" class="amount-display">0원</span>
         </div>
         <p class="info">
-          *아파트는 KB시세를 입력하세요 →
+          *아파트는 KB시세를 입력하세요.</a>
           <a href="https://kbland.kr/search" target="_blank" rel="noopener">[KB시세 바로가기]</a><br>
           (3층 이상: 일반가 / 2층 이하: 하위평균가)
         </p>
@@ -112,12 +112,12 @@
           <input type="text" id="requestedLoan" placeholder="예: 50,000,000">
           <span id="requestedLoan_view" class="amount-display">0원</span>
         </div>
-        <p class="info">* 대환(상환)해야 할 금액이 포함된 총 필요 금액을 입력하세요.</p>
+        <p class="info">* 상환+반환할 금액을 포함해주세요.</p>
       </div>
 
       <div class="step">
         <label class="steplabel no-badge-before">
-          (선택사항) 금액중 상환+반환할 금액
+          (선택) 대출금액중 상환+반환할 금액
         </label>
         <div class="amount-row">
           <input type="text" id="deduction" value="0">
@@ -127,7 +127,7 @@
 
       <div class="step">
         <label class="steplabel no-badge-before">
-          (선택사항) 지분 대출의 경우 지분율 입력
+          (선택) 지분율 입력(공동소유 부동산의 경우)
         </label>
         <div class="amount-row">
           <input
@@ -141,8 +141,7 @@
           <span id="sharePercent_view" class="amount-display">100%</span>
         </div>
         <p class="info">
-          지분 대출이면 본인 지분율(1~100%)을 입력하세요.
-          미입력 시 전체 소유(100%) 기준으로 계산합니다.
+          본인 지분율(%)을 1~100 숫자로 입력하세요.      
         </p>
       </div>
     </div>
@@ -196,3 +195,4 @@
   </div>
 </body>
 </html>
+
