--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <p class="info">
           *아파트는 KB시세를 입력하세요.</a>
-          <a href="https://kbland.kr/search" target="_blank" rel="noopener">[KB시세 바로가기]</a><br>
+          <a href="https://kbland.kr/search" target="_blank" rel="noopener">[KB시세로 Go~]</a><br>
           (3층 이상: 일반가 / 2층 이하: 하위평균가)
         </p>
       </div>
@@ -112,7 +112,7 @@
           <input type="text" id="requestedLoan" placeholder="예: 50,000,000">
           <span id="requestedLoan_view" class="amount-display">0원</span>
         </div>
-        <p class="info">* 상환+반환할 금액을 포함해주세요.</p>
+        <p class="info">*상환+반환할 금액을 포함해주세요.</p>
       </div>
 
       <div class="step">
@@ -195,4 +195,5 @@
   </div>
 </body>
 </html>
+
 
