--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
           <input type="text" id="requestedLoan" placeholder="예: 50,000,000">
           <span id="requestedLoan_view" class="amount-display">0원</span>
         </div>
-        <p class="info">*상환+반환할 금액을 포함해주세요.</p>
+        <p class="info">*상환+반환할 금액을 포함해주세요.
+        </p>
       </div>
 
       <div class="step">
@@ -141,7 +142,7 @@
           <span id="sharePercent_view" class="amount-display">100%</span>
         </div>
         <p class="info">
-          본인 지분율(%)을 1~100 숫자로 입력하세요.      
+          *본인 지분율(%)을 1~100 숫자로 입력하세요.      
         </p>
       </div>
     </div>
@@ -195,5 +196,6 @@
   </div>
 </body>
 </html>
+
 
 
