--- a/beta/calculator.html
+++ b/beta/calculator.html
@@ -72,7 +72,8 @@
           <span id="marketValue_view" class="amount-display">0원</span>
         </div>
         <p class="info">
-          *아파트는 KB시세를 입력하세요<br><a href="https://kbland.kr/search" target="_blank" rel="noopener">[KB시세 바로가기]</a><br>
+          *아파트는 KB시세를 입력하세요.</a>
+          <a href="https://kbland.kr/search" target="_blank" rel="noopener">[KB시세 Go~]</a><br>
           (3층 이상: 일반가 / 2층 이하: 하위평균가)
         </p>
       </div>
