--- a/beta/calculator.html
+++ b/beta/calculator.html
@@ -92,7 +92,7 @@
           <input type="text" id="requestedLoan" placeholder="예: 50,000,000">
           <span id="requestedLoan_view" class="amount-display">0원</span>
         </div>
-        <p class="info">* 대환(상환) 할 금액을 포함해주세요.</p>
+        <p class="info">*대환(상환)할 금액을 포함해주세요.</p>
       </div>
 
       <div class="step">
@@ -110,7 +110,8 @@
           <input type="number" id="sharePercent" inputmode="numeric" min="1" max="100" placeholder="예: 50">
           <span id="sharePercent_view" class="amount-display">100%</span>
         </div>
-        <p class="info">본인의 지분율(%)을 숫자로 입력하세요.</p>
+        <p class="info">*본인의 지분율(%)을 1~100 숫자로 입력하세요.
+        </p>
       </div>
     </div>
 
