--- a/beta/products/commercial-auction.html
+++ b/beta/products/commercial-auction.html
@@ -64,7 +64,7 @@
         <p>· <strong>대상고객</strong> Ι 경매·공매로 낙찰받고 자금이 필요한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 2천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
-        <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
+        <p>· <strong>대출금리</strong> Ι 최저 10.0% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
@@ -85,14 +85,14 @@
         <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
         <article class="product-info-card calculator-card">
           <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
-          <h3 style="margin-bottom:10px;">낙찰받은 근린생활시설의 잔금·추가자금 한도 가늠</h3>
+          <h3 style="margin-bottom:10px;">낙찰받은 부동산의 대출 가능성 확인</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
             <li>신용점수영향 <strong>NO</strong></li>
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                근린생활시설 KB시세·낙찰가를 반영해
+                근린생활시설 낙찰가를 반영해
                 대출 한도를 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
