--- a/beta/products/commercial-auction.html
+++ b/beta/products/commercial-auction.html
@@ -57,7 +57,7 @@
         <p class="hero-intro">
           온라인투자연계금융업(이하 ‘온투업’) 근린생활시설 담보대출 상품 중
           <strong>경락잔금대출</strong>에 관한 정보입니다.</br>
-          법원 경매, 공매로 근린생활시설을 낙찰받은 후 <strong>잔금 등 추가자금</strong>을 마련할 때 활용되는 상품입니다.
+          경매, 공매로 부동산을 낙찰받은 후 <strong>잔금 등 추가자금</strong>을 마련할 때 활용되는 상품입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
@@ -92,7 +92,7 @@
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                근린생활시설 낙찰가를 반영해
+                해당 부동산의 낙찰가를 반영해
                 대출 한도를 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
@@ -132,14 +132,14 @@
         <ul style="margin-bottom:14px;">
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
-          <li>경매·공매로 근린생활시설을 낙찰받고 소유권 이전 예정인 고객</li>
+          <li>경매·공매로 낙찰받고 소유권 이전 예정인 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
           <li>
-            <strong>낙찰가 또는 기준시세 × LTV - 선순위 채권액 등</strong>
+            <strong>낙찰가 또는 감정 × LTV - 선순위 채권액 등</strong>
           </li>
           <li>낙찰가, 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
         </ul>
@@ -192,7 +192,7 @@
 
     <!-- 2. 이런 경우 근린생활시설 경락잔금대출을 찾습니다. -->
     <section class="products-section products-section--info">
-      <h2 class="products-section__title">2. 이런 경우 근린생활시설 경락잔금대출을 찾습니다.</h2>
+      <h2 class="products-section__title">2. 이런 경우 경락잔금대출을 찾습니다.</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
           <h3>낙찰 후 잔금이 부족한 경우</h3>
@@ -229,7 +229,7 @@
         <article class="product-info-card">
           <h3>Q. 경락잔금대출 한도는 어떻게 정해지나요?</h3>
           <p>
-            보통 <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV − 선순위 채권액</strong>을 기준으로
+            보통 <strong>낙찰가 또는 감정가 중 낮은 금액 × LTV − 선순위 채권액</strong>을 기준으로
             대략적인 한도를 산정합니다.
           </p>
           <p>
