--- a/beta/products/land-auction.html
+++ b/beta/products/land-auction.html
@@ -141,7 +141,7 @@
           <li>
             <strong>낙찰가 또는 감정가 × LTV - 선순위 채권액 등</strong>
           </li>
-          <li>낙찰가, 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
+          <li> 기타 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
         </ul>
 
         <h3>대출기간</h3>
