--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -139,9 +139,9 @@
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
           <li>
-            <strong>낙찰가 또는 기준시세 × LTV - 선순위 채권액 등</strong>
+            <strong>낙찰가 또는 감정가가 × LTV - 선순위 채권액 등</strong>
           </li>
-          <li>낙찰가, 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
+          <li>기타 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -151,85 +151,7 @@
 
         <h3>상환방법</h3>
         <ul style="margin-bottom:14px;">
-          <li>만기일시상환</li>
-        </ul>
-
-        <h3>대출실행 시점</h3>
-        <ul style="margin-bottom:14px;">
-          <li>보통 <strong>잔금 납부일</strong>에 대출이 실행됩니다.</li>
-        </ul>
-
-        <h3>만기연장</h3>
-        <ul style="margin-bottom:14px;">
-          <li>
-            연장가능<br>
-            <span class="extend-note">
-              *연장 시 담보가치 하락, 신용정보 변동 등에 따라 연장이 어려울 수 있으며,
-              연장 시 금리와 플랫폼 수수료가 변경될 수 있습니다.
-            </span>
-          </li>
-        </ul>
-        
-        <h3>플랫폼수수료</h3>
-        <ul style="margin-bottom:14px;">
-          <li>최소 1.7% ~ 5.0% 이내 (부가세 별도)</li>
-        </ul>
-
-        <h3>기타·부대비용</h3>
-        <ul style="margin-bottom:14px;">
-          <li>근저당권 설정 관련 비용</li>
-          <li>임대차 권리조사 비용</li>
-          <li>감정비용 (시세 확인이 어려운 경우)</li>
-          <li>출장 자서비용 등(대면 자서 온투업사의 경우)</li>
-        </ul>
-
-        <h3>중도상환수수료</h3>
-        <ul style="margin-bottom:14px;">
-          <li>중도상환금액 × 0% ~ 1.0% (업체별 상이)</li>
-        </ul>
-      </article>
-    </section>
-
-    <!-- 2. 이런 경우 아파트 경락잔금대출을 찾습니다. -->
-    <section class="products-section products-section--info">
-      <h2 class="products-section__title">2. 이런 경우 아파트 경락잔금대출을 찾습니다.</h2>
-      <div class="products-info-grid">
-        <article class="product-info-card">
-          <h3>낙찰 후 잔금이 부족한 경우</h3>
-          <p>
-            예상보다 높은 가격에 낙찰받아 <strong>자기자본만으로 잔금이 부족</strong>할 때,
-            경락잔금대출을 통해 잔금을 맞추는 경우가 많습니다.
-          </p>
-        </article>
-
-        <article class="product-info-card">
-          <h3>취득세·각종 비용까지 함께 필요할 때</h3>
-          <p>
-            낙찰잔금 외에도 <strong>취득세, 법무사 비용, 인테리어 비용</strong> 등
-            초기 비용이 많이 들어갈 때, 경락잔금과 함께 추가자금을
-            한 번에 조달하는 구조를 고려하기도 합니다.
-          </p>
-        </article>
-
-        <article class="product-info-card">
-          <h3>은행의 경락잔금대출 한도가 부족한 경우</h3>
-          <p>
-            은행의 경락잔금대출 한도가 부족하거나,
-            DSR·소득 요건으로 인해 충분한 한도가 나오지 않을 때
-            <strong>온투업 경락잔금대출</strong>을 추가로 검토하는 경우가 있습니다.
-          </p>
-        </article>
-      </div>
-    </section>
-
-    <!-- 3. 자주 묻는 질문 (FAQ) -->
-    <section class="products-section products-section--info">
-      <h2 class="products-section__title">3. 자주 묻는 질문 (FAQ)</h2>
-      <div class="products-info-grid">
-        <article class="product-info-card">
-          <h3>Q. 경락잔금대출 한도는 어떻게 정해지나요?</h3>
-          <p>
-            보통 <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV − 선순위 채권액</strong>을 기준으로
+          <li>만기일시상가 중 낮은 금액 × LTV − 선순위 채권액</strong>을 기준으로
             대략적인 한도를 산정합니다.
           </p>
           <p>
@@ -254,7 +176,8 @@
           <h3>Q. 후추 담보대출 계산기로 경락잔금대출도 확인 가능한가요?</h3>
           <p>
             네. 가능합니다.
-            
+          </p>
+          <p>
             또한 입찰전에 <strong>예상 입찰가격</strong>을 기재하고
             대출 가능 금액을 통해 자기자본을 얼마나 준비해야 하는지 파악 할 수 있습니다.
           </p>
