--- a/beta/products/commercial-auction.html
+++ b/beta/products/commercial-auction.html
@@ -141,7 +141,7 @@
           <li>
             <strong>낙찰가 또는 감정 × LTV - 선순위 채권액 등</strong>
           </li>
-          <li>낙찰가, 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
+          <li>기타 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -180,7 +180,7 @@
           <li>근저당권 설정 관련 비용</li>
           <li>임대차 권리조사 비용</li>
           <li>감정비용 (시세 확인이 어려운 경우)</li>
-          <li>출장 자서비용 등(대면 자서 온투업사의 경우)</li>
+          <li>출장 자서비용 등 (대면 자서 온투업사의 경우)</li>
         </ul>
 
         <h3>중도상환수수료</h3>
@@ -241,8 +241,8 @@
         <article class="product-info-card">
           <h3>Q. 잔금과 인테리어 비용을 동시에 대출받을 수 있나요?</h3>
           <p>
-            해당 부동산의 잔금, 인테리어, 명도비 등
-            사용 용도에 대해서는 전혀 관계 없습니다.
+           해당 부동산의 잔금, 인테리어, 명도비 등 다양한 용도로 자금을 사용할 수 있지만,
+           실제 승인 여부와 한도는 자금 사용 계획, 상환능력, 심사 결과에 따라 달라집니다.
           </p>
           <p>
             다만 LTV 한도와 상환능력 등을 종합적으로 따져야 하므로,
@@ -254,7 +254,8 @@
           <h3>Q. 후추 담보대출 계산기로 경락잔금대출도 확인 가능한가요?</h3>
           <p>
             네. 가능합니다.
-            
+          </p>
+          <p>
             또한 입찰전에 <strong>예상 입찰가격</strong>을 기재하고
             대출 가능 금액을 통해 자기자본을 얼마나 준비해야 하는지 파악 할 수 있습니다.
           </p>
