--- a/beta/products/detached-auction.html
+++ b/beta/products/detached-auction.html
@@ -241,12 +241,8 @@
         <article class="product-info-card">
           <h3>Q. 잔금과 인테리어 비용을 동시에 대출받을 수 있나요?</h3>
           <p>
-            해당 부동산의 잔금, 인테리어, 명도비 등
-            사용 용도에 대해서는 전혀 관계 없습니다.
-          </p>
-          <p>
-            다만 LTV 한도와 상환능력 등을 종합적으로 따져야 하므로,
-            정확한 가능 여부는 각 온투업사와의 상담이 필요합니다.
+            해당 부동산의 잔금, 인테리어, 명도비 등 다양한 용도로 자금을 사용할 수 있지만,
+            실제 승인 여부와 한도는 자금 사용 계획, 상환능력, 심사 결과에 따라 달라집니다.
           </p>
         </article>
 
