--- a/beta/products/villa-auction.html
+++ b/beta/products/villa-auction.html
@@ -92,7 +92,7 @@
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                빌라·연립 KB시세·낙찰가를 반영해
+                해당 부동산의 낙찰가를 반영해
                 대출 한도를 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
@@ -139,9 +139,9 @@
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
           <li>
-            <strong>낙찰가 또는 기준시세 × LTV - 선순위 채권액 등</strong>
+            <strong>낙찰가 또는 감정가 × LTV - 선순위 채권액 등</strong>
           </li>
-          <li>낙찰가, 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
+          <li>기타 권리사항 등에 따라 실제 한도는 변동될 수 있습니다.</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -229,7 +229,7 @@
         <article class="product-info-card">
           <h3>Q. 경락잔금대출 한도는 어떻게 정해지나요?</h3>
           <p>
-            보통 <strong>낙찰가 또는 기준시세 중 낮은 금액 × LTV − 선순위 채권액</strong>을 기준으로
+            보통 <strong>낙찰가 또는 감정가 중 낮은 금액 × LTV − 선순위 채권액</strong>을 기준으로
             대략적인 한도를 산정합니다.
           </p>
           <p>
@@ -241,12 +241,8 @@
         <article class="product-info-card">
           <h3>Q. 잔금과 인테리어 비용을 동시에 대출받을 수 있나요?</h3>
           <p>
-            해당 부동산의 잔금, 인테리어, 명도비 등
-            사용 용도에 대해서는 전혀 관계 없습니다.
-          </p>
-          <p>
-            다만 LTV 한도와 상환능력 등을 종합적으로 따져야 하므로,
-            정확한 가능 여부는 각 온투업사와의 상담이 필요합니다.
+            해당 부동산의 잔금, 인테리어, 명도비 등 다양한 용도로 자금을 사용할 수 있지만,
+            실제 승인 여부와 한도는 자금 사용 계획, 상환능력, 심사 결과에 따라 달라집니다.
           </p>
         </article>
 
@@ -254,7 +250,8 @@
           <h3>Q. 후추 담보대출 계산기로 경락잔금대출도 확인 가능한가요?</h3>
           <p>
             네. 가능합니다.
-            
+          </p>
+          <p>
             또한 입찰전에 <strong>예상 입찰가격</strong>을 기재하고
             대출 가능 금액을 통해 자기자본을 얼마나 준비해야 하는지 파악 할 수 있습니다.
           </p>
