--- a/beta/products/villa-auction.html
+++ b/beta/products/villa-auction.html
@@ -57,7 +57,7 @@
         <p class="hero-intro">
           온라인투자연계금융업(이하 ‘온투업’) 빌라·연립 담보대출 상품 중
           <strong>경락잔금대출</strong>에 관한 정보입니다.</br>
-          법원 경매, 공매로 빌라·연립을 낙찰받은 후 <strong>잔금 등 추가자금</strong>을 마련할 때 활용되는 상품입니다.
+          경매, 공매로 부동산을 낙찰받은 후 <strong>잔금 등 추가자금</strong>을 마련할 때 활용되는 상품입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
