--- a/beta/products/apt-deposit.html
+++ b/beta/products/apt-deposit.html
@@ -62,7 +62,7 @@
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 아파트 임대인으로, 보증금 반환 자금이 필요한 개인</p>
+        <p>· <strong>대상고객</strong> Ι 임차인 보증금 반환 자금이 필요한 임대인(개인)</p>
         <p>· <strong>대출한도</strong> Ι 최소 2천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
@@ -86,14 +86,14 @@
         <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
         <article class="product-info-card calculator-card">
           <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
-          <h3 style="margin-bottom:10px;">보증금·선순위 대출을 반영한 한도 가늠</h3>
+          <h3 style="margin-bottom:10px;">보증금·선순위 대출을 반영한 대출 가능성 확인</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
             <li>신용점수영향 <strong>NO</strong></li>
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                아파트 KB시세, 선순위 대출, 임대보증금 등을 반영해
+                KB시세, 선순위 대출, 임대보증금 등을 반영해
                 <strong>보증금 반환에 쓸 수 있는 대출 한도</strong>를 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
