--- a/beta/products/apt-deposit.html
+++ b/beta/products/apt-deposit.html
@@ -41,7 +41,7 @@
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">광고문의</a>
-          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자(베타)</a>
+          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자</a>
         </div>
       </div>
     </div>
@@ -106,12 +106,12 @@
         <!-- 오른쪽: 실제 대출 사례 안내 -->
         <article class="product-info-card calculator-extra-card">
           <h2 class="products-section__title">실제 보증금 반환대출 사례를 확인하세요.</h2>
-          <h3 class="calculator-extra-subtitle">전세·월세 보증금, 동시에 여러 세대까지</h3>
+          <h3 class="calculator-extra-subtitle">전세·월세 보증금 반환에 추가대출까지</h3>
           <p class="calculator-extra-text">
             후추의 <span class="naver-blog-text">네이버 공식블로그</span>에서
             <strong>임대보증금 반환대출 사례</strong>를 확인해보세요.</p></br>
-            기존 임차인 보증금 반환, 동시 만기 세대 처리, 추가 운전자금 등
-            구조와 금리, 플랫폼수수료 수준을 미리 확인해 보세요.
+            기존 임차인 보증금 반환, 추가 운전자금 사례와
+            금리 및 플랫폼수수료 수준을 미리 확인해 보세요.
           </p>
           <div class="product-card__buttons">
             <a href="https://blog.naver.com/honestbros"
@@ -134,7 +134,7 @@
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
           <li>본인 또는 배우자 명의로 아파트를 소유 중인 임대인</li>
-          <li>전세·반전세·월세(보증부 월세) 등 임대보증금 반환이 예정된 고객</li>
+          <li>전세·반전세·월세 등 임대보증금 반환 자금이 필요한 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
