--- a/beta/products/apt-deposit.html
+++ b/beta/products/apt-deposit.html
@@ -196,7 +196,7 @@
 
     <!-- 2. 이런 경우 아파트 임대보증금 반환대출을 찾습니다. -->
     <section class="products-section products-section--info">
-      <h2 class="products-section__title">2. 이런 경우 아파트 임대보증금 반환대출을 찾습니다.</h2>
+      <h2 class="products-section__title">2. 이런 경우 임대보증금 반환대출을 찾습니다.</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
           <h3>전세 만기, 보증금이 한꺼번에 빠져나가야 할 때</h3>
@@ -209,19 +209,18 @@
         <article class="product-info-card">
           <h3>신규 임차인 입주 전, 먼저 보증금을 반환해야 할 때</h3>
           <p>
-            기존 임차인이 먼저 이사 나가고,
-            신규 임차인의 보증금은 아직 들어오지 않은 <strong>공백 기간</strong>에
-            보증금 반환 자금이 필요한 경우에 활용됩니다.
+            기존 임차인 만기전 신규 임차인이 확정되지 않고 여유자금이 없어
+            보증금 반환을 할 수 없을때 활용됩니다.
           </p>
         </article>
 
         <article class="product-info-card">
           <h3>여러 세대 보증금이 동시에 만기 도래한 경우</h3>
           <p>
-            다가구·소형 아파트 여러 세대를 보유한 임대인의 경우,
+            다가구·소형 아파트 여러 세대를 보유한 임대인(개인)의 경우,
             <strong>여러 세대의 보증금이 동시에 만기</strong>가 되어
             일시적으로 큰 금액의 보증금 반환이 필요할 때
-            온투업 임대보증금 반환대출을 검토하는 경우가 있습니다.
+            온투업 임대보증금 반환대출을 검토하는 사례례가 있습니다.
           </p>
         </article>
       </div>
@@ -234,7 +233,7 @@
         <article class="product-info-card">
           <h3>Q. 임대보증금 반환대출 한도는 어떻게 정해지나요?</h3>
           <p>
-            보통 <strong>아파트 기준시세 × LTV − 선순위 채권액 − 기존 임대보증금 등</strong>을 기준으로
+            보통 <strong>KB시세 × LTV − 선순위 채권액 − 기존 임대보증금 등</strong>을 기준으로
             대략적인 한도를 산정합니다.
           </p>
           <p>
@@ -246,22 +245,21 @@
         <article class="product-info-card">
           <h3>Q. 새로 들어오는 임차인의 보증금으로 상환해도 되나요?</h3>
           <p>
-            일부 온투업사는 <strong>신규 임대차 계약 이후 들어오는 보증금</strong>을 활용해
-            대출을 상환하는 구조도 취급하고 있습니다.
+            당연하죠.
           </p>
-          <p>
-            다만 임대계약 조건, 공실 가능성 등을 함께 따져야 하므로,
-            실제 구조와 상환 계획은 각 온투업사와의 상담이 필요합니다.
+           <p>
+            다만 일부 온투업사는 중도상환수수료가 있으니, 반드시 확인후 
+            대출을 받으셔야 합니다.
           </p>
         </article>
 
         <article class="product-info-card">
-          <h3>Q. 후추 담보대출 계산기로 임대보증금 반환대출도 확인 가능한가요?</h3>
+          <h3>Q. 후추 담보대출 계산기로 임대보증금 반환대출도 계산 가능한가요?</h3>
           <p>
             네. 가능합니다.</p>
           <p>
-            아파트 기준시세, 선순위 대출, 임대보증금 등을 입력하면
-            <strong>대략적인 대출 가능 금액과 필요한 자기자본 수준</strong>을
+            KB시세, 선순위 대출, 임대보증금 등을 입력하면
+            <strong>대략적인 대출 가능 금액</strong>과 <strong>추가 대출가능</strong>금액까지
             사전에 가늠해 볼 수 있습니다.
           </p>
          </article>
