--- a/beta/products/villa-auction.html
+++ b/beta/products/villa-auction.html
@@ -132,7 +132,7 @@
         <ul style="margin-bottom:14px;">
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
-          <li>경매·공매로 빌라·연립을 낙찰받고 소유권 이전 예정인 고객</li>
+          <li>경매·공매로 빌라를 낙찰받고 소유권 이전 예정인 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
