--- a/beta/index.html
+++ b/beta/index.html
@@ -45,7 +45,7 @@
         <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
         <a class="beta-menu-link" href="/">담보대출 계산기</a>
         <a class="beta-menu-link" href="/beta/company.html">회사소개</a>
-        <a class="beta-menu-link" href="/beta/contact.html">제휴 및 기타문의</a>
+        <a class="beta-menu-link" href="/beta/contact.html">광고문의</a>
       </div>
     </div>
   </div>
@@ -60,26 +60,10 @@
         <div class="beta-hero-grid">
 
           <!-- 왼쪽: 메인 배너 -->
-          <div class="beta-hero-banner">
-            <div class="beta-hero-banner__slides">
-              <article class="beta-hero-slide">
-                <div class="beta-hero-slide__pill">UPDATE NEWS</div>
-                <h1 class="beta-hero-slide__title">온투업(P2P) 담보대출 통계 베타 오픈</h1>
-                <p class="beta-hero-slide__desc">
-                  중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 현황을 한눈에 볼 수 있게 정리했습니다.
-                </p>
-                <button class="beta-hero-slide__btn" type="button">
-                  공지사항 페이지 준비중
-                </button>
-              </article>
-            </div>
-            <div class="beta-hero-banner__dots">
-              <button class="dot is-active" type="button"></button>
-              <button class="dot" type="button"></button>
-              <button class="dot" type="button"></button>
-            </div>
-          </div>
-
+         <!-- 왼쪽: 이미지형 히어로 배너 -->
+    <a href="#" class="beta-hero-banner">
+      <img src="/assets/hero/npl-seminar-01.png" alt="온투업 담보대출 통계/계산기 서비스 소개 배너">
+    </a>
           <!-- 오른쪽: 2×2 기능 카드 + 금일 이용자수 + 서브 배너 -->
           <div class="beta-hero-right">
 
