--- a/beta/index.html
+++ b/beta/index.html
@@ -62,7 +62,7 @@
           <!-- 왼쪽: 메인 배너 -->
          <!-- 왼쪽: 이미지형 히어로 배너 -->
     <a href="#" class="beta-hero-banner">
-      <img src="/assets/hero/npl-seminar-01.png" alt="온투업 담보대출 통계/계산기 서비스 소개 배너">
+      <img src="/assets/hero/banner1.png" alt="온투업 담보대출 통계/계산기 서비스 소개 배너">
     </a>
           <!-- 오른쪽: 2×2 기능 카드 + 금일 이용자수 + 서브 배너 -->
           <div class="beta-hero-right">
