--- a/beta/index.html
+++ b/beta/index.html
@@ -65,14 +65,14 @@
            <!-- 1번 배너 -->
   <a href="/beta/products/index.html"
      class="beta-hero-banner__slide is-active">
-    <img src="/assets/hero/hero-01.png"
+    <img src="/assets/hero/banner1.png"
          alt="온투업 담보대출 상품 통계 안내 배너">
   </a>
 
   <!-- 2번 배너 -->
   <a href="/beta/"
      class="beta-hero-banner__slide">
-    <img src="/assets/hero/hero-02.png"
+    <img src="/assets/hero/banner2.png"
          alt="온투업 담보대출 통계 요약 배너">
   </a>
 
