--- a/beta/products/apt-deposit.html
+++ b/beta/products/apt-deposit.html
@@ -110,7 +110,7 @@
           <p class="calculator-extra-text">
             후추의 <span class="naver-blog-text">네이버 공식블로그</span>에서
             <strong>임대보증금 반환대출 사례</strong>를 확인해보세요.</p></br>
-            기존 임차인 보증금 반환, 추가 운전자금대출 사례와
+            기존 임차인 보증금 반환 및 추가 대출 사례와
             금리 및 플랫폼수수료 수준을 미리 확인해 보세요.
           </p>
           <div class="product-card__buttons">
