--- a/beta/products/villa-deposit.html
+++ b/beta/products/villa-deposit.html
@@ -93,7 +93,7 @@
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                KB시세, 선순위 대출, 임대보증금 등을 반영해
+                시세와 선순위 대출, 임대보증금 등을 반영해
                 <strong>보증금 반환에 쓸 수 있는 대출 한도</strong>를 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
