--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -23,25 +23,21 @@
         </span>
       </a>
 
-      <!-- MENU + 드롭다운 -->
-      <div class="beta-menu">
-        <button id="betaMenuToggle"
-                class="beta-menu-toggle"
-                type="button"
-                aria-haspopup="true"
-                aria-expanded="false">
-          <span class="beta-menu-toggle__icon">
-            <span></span><span></span><span></span>
-          </span>
-          <span class="beta-menu-toggle__label">MENU</span>
-        </button>
+       <!-- MENU + 드롭다운 -->
+<button id="betaMenuToggle"
+        class="beta-menu-toggle"
+        type="button"
+        aria-haspopup="true"
+        aria-expanded="false">
+  <span class="beta-menu-toggle__label">MENU</span>
+</button>
 
-        <div id="betaMenuPanel" class="beta-menu-panel hide">
+          <div id="betaMenuPanel" class="beta-menu-panel hide">
           <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
           <a class="beta-menu-link" href="/products/">온투업 대출상품정보</a>
           <a class="beta-menu-link" href="/">담보대출 계산기</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
-          <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
+          <a class="beta-menu-link" href="/contact.html">광고문의</a>
           <a class="beta-menu-link" href="/admin-beta.html">관리자(베타)</a>
         </div>
       </div>
