--- a/beta/index.html
+++ b/beta/index.html
@@ -37,7 +37,7 @@
 
       <!-- 처음에는 숨김: hide 클래스 중요!! -->
       <div id="betaMenuPanel" class="beta-menu-panel hide">
-        <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
+        <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
         <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
         <a class="beta-menu-link" href="/">담보대출 계산기</a>
         <a class="beta-menu-link" href="/beta/company.html">회사소개</a>
@@ -86,7 +86,7 @@
             <!-- 2×2 이미지 카드 (일단 정적인 이미지; 나중에 관리자 연동) -->
             <div class="beta-hero-cards">
               <div class="beta-hero-cards__grid">
-                <a href="/beta/" class="beta-hero-card">
+                <a href="/beta/ontu-stats.html" class="beta-hero-card">
                   <img src="/assets/hero-card-stat.png" alt="온투업(P2P) 대출 통계" />
                 </a>
                 <a href="/beta/products/index.html" class="beta-hero-card">
