--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -14,7 +14,7 @@
   <!-- 이 페이지 전용 JS -->
   <script type="module" src="/assets/ontu-stats.js?v=20251127"></script>
 </head>
-<body class="beta-body">
+<body class="beta-body ontu-stats-page">
 
   <!-- 상단 헤더: 로고 + MENU -->
   <header class="huchu-header beta-header" role="banner">
